--- a/Karpathy-GPT/gpt.ipynb
+++ b/Karpathy-GPT/gpt.ipynb
@@ -1838,9 +1838,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "At this point in the video (around here: https://youtu.be/kCc8FmEb1nY?t=5646), he starts talking about normalizations and stuff, and I have no idea what they are.\n",
-    "\n",
-    "So I am going on a tangential journey to understand them (documented in the `Ng-Normalization`) folder, and I'll come back to this after that."
+    "At this point in the video (around here: https://youtu.be/kCc8FmEb1nY?t=5646)."
    ]
   },
   {
@@ -1852,11 +1850,10 @@
     "\n",
     "2. Layer Normalization:\n",
     "\n",
-    "I'm just going to drop a couple of resources here and then come back later to read them:\n",
-    "1. https://leimao.github.io/blog/Batch-Normalization/\n",
-    "2. https://leimao.github.io/blog/Layer-Normalization/\n",
-    "3. https://www.youtube.com/watch?v=nUUqwaxLnWs\n",
-    "4. https://arxiv.org/abs/1607.06450\n",
+    "He started by talking about batch normalization, so I watched Andrew Ng's videos on that.\n",
+    "\n",
+    "Next I'm going to watch Kilcher's video on Group Normalization.\n",
+    "and then come back to this.\n",
     "\n",
     "\n"
    ]
