Added backprop for batch norm.

--- a/Ng - Improving DNNs/27, 28, 29, 30 - Batch Norm.ipynb
+++ b/Ng - Improving DNNs/27, 28, 29, 30 - Batch Norm.ipynb
@@ -142,6 +142,29 @@
     "\n",
     "And then, we use these exponential averages to normalize the test data.\n"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Backpropagation with Batch Norm\n",
+    "\n",
+    "From the batch norm paper, if we write the output of the next layer as: $l = F(y)$ where $y$ is the output of the current layer which has been batch normalized, we get the following derivatives:\n",
+    "\n",
+    "![](.graphics/2023-04-27-18-41-25.png)\n",
+    "\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "And you can see why it happens this way, because now we have $3$ additive paths that go from $x$ to $y$ (From Kilcher's video):\n",
+    "\n",
+    "![](.graphics/2023-04-27-18-42-24.png)"
+   ]
   }
  ],
  "metadata": {
