added layernorm and update todo

--- a/Karpathy-GPT/gpt.ipynb
+++ b/Karpathy-GPT/gpt.ipynb
@@ -1850,13 +1850,33 @@
     "\n",
     "2. Layer Normalization:\n",
     "\n",
+    "---\n",
+    "\n",
     "He started by talking about batch normalization, so I watched Andrew Ng's videos on that.\n",
+    "Then I watched Yannic Kilcher's video on [Group Normalization](https://www.youtube.com/watch?v=l_3zj6HeWUE).\n",
     "\n",
-    "Next I'm going to watch Kilcher's video on Group Normalization.\n",
-    "and then come back to this.\n",
+    "I have written a bunch of notes on batch normalization in the `Ng - Improving DNNs` folder, but I'll just write down the forumla for **Layer Normalization** here: \\\n",
+    "(We compute the layer normalization statistics over all the hidden units in the same layer)\n",
     "\n",
+    "$$\n",
+    "\\mu^{[l]} = \\frac{1}{H} \\sum_{i=1}^{H} z^{[l](i)} \\\\\n",
+    "\\, \\\\\n",
+    "\\sigma^{[l]} = \\sqrt{\\frac{1}{H} \\sum_{i=1}^{H} (z^{[l]}_{i} - \\mu^{[l]})^2} \\\\\n",
+    "$$\n",
+    "\n",
+    "Where $H$ is the number of hidden units in the layer, and $z^{[l]}_{i}$ is the $i$ th hidden unit in the $l$ th layer.\n",
+    "\n",
+    "(There is also instance normalization and group normalization, but we don't need to worry about those for now.)\n",
+    "\n",
+    "---\n",
     "\n"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
