Finished Karpathy's GPT youtube video.

--- a/Karpathy-GPT/gpt.ipynb
+++ b/Karpathy-GPT/gpt.ipynb
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1776,7 +1776,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1846,10 +1846,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "And now, for the second method of improving our optimization:\n",
-    "\n",
-    "2. Layer Normalization:\n",
-    "\n",
     "---\n",
     "\n",
     "He started by talking about batch normalization, so I watched Andrew Ng's videos on that.\n",
@@ -1876,7 +1872,216 @@
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "And now, for the second method of improving our optimization:\n",
+    "\n",
+    "2. Layer Normalization:\n",
+    "\n",
+    "We see in our graph above that there is an `Add & Norm` block, and we want to use Layer Normalization for it, but the slight change that has happened in Transformer implementations is that nowadays people do the `LayerNorm` before the `MaskedMultiHeadAttention` and the `FeedForward` layers, and then do the `Add` after them. This is called the \"pre-norm\" formulation.\n",
+    "\n",
+    "So let's update our Block once again!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Block(nn.Module):\n",
+    "\n",
+    "    def __init__(self, n_embed: int, n_heads: int) -> None:\n",
+    "        super().__init__()\n",
+    "\n",
+    "        head_size = n_embed // n_heads\n",
+    "\n",
+    "        # Communication is the MultiHeadAttention\n",
+    "        self.sa = MultiHeadAttention(n_heads, head_size, n_embed)\n",
+    "        \n",
+    "        # Computation is the FeedForward\n",
+    "        self.ffwd = FeedForward(n_embed)\n",
+    "\n",
+    "        # So both batch and time dimensions act as batch dimensions\n",
+    "        # (Because we're passing n_embed as the number of features here)\n",
+    "        self.ln1 = nn.LayerNorm(n_embed)\n",
+    "        self.ln2 = nn.LayerNorm(n_embed)\n",
+    "    \n",
+    "    def forward(self, x: torch.tensor):\n",
+    "        # Adding the residual connection\n",
+    "        x = x + self.sa( self.ln1(x) )\n",
+    "        # To both communication and computation\n",
+    "        x = x + self.ffwd( self.ln2(x) )\n",
+    "\n",
+    "        return x"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "And add the LayerNorm to our Bigram model as well:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Now, let's try to update the Bigram model even more with Blocks!\n",
+    "\n",
+    "class BigramLanguageModel(nn.Module):\n",
+    "\n",
+    "    def __init__(self, vocab_size: int, block_size: int, n_embed: int, n_heads: int) -> None:\n",
+    "        super().__init__()\n",
+    "        # We make an embedding table for the __value__ of the tokens\n",
+    "        self.token_embedding_table = nn.Embedding(vocab_size, n_embed)\n",
+    "\n",
+    "        # We also make an embedding table for the __position__ of the tokens\n",
+    "        # meaning that both the token and the position of the token will be paid attention to\n",
+    "        self.position_embedding_table = nn.Embedding(block_size, n_embed)\n",
+    "\n",
+    "        # A couple of blocks in sequence (Communication and Computation, many times)\n",
+    "\n",
+    "        self.blocks = nn.Sequential(\n",
+    "            Block(n_embed, n_heads=4),\n",
+    "            Block(n_embed, n_heads=4),\n",
+    "            Block(n_embed, n_heads=4),\n",
+    "            # We should also have a LayerNorm at the end of the stack\n",
+    "            # Right before linear layer that decodes into the vocabulary\n",
+    "            nn.LayerNorm(n_embed)\n",
+    "        )\n",
+    "        \n",
+    "        self.lm_head = nn.Linear(n_embed, vocab_size)\n",
+    "    \n",
+    "    def forward(self, idx, targets=None):\n",
+    "        B, T = idx.shape\n",
+    "\n",
+    "        # idx and targets are both (B, T) tensors of integers\n",
+    "\n",
+    "        tok_emb = self.token_embedding_table(idx) # (B, T, n_embed)\n",
+    "        pos_emb = self.position_embedding_table(torch.arange(T, device=idx.device)) # (T, n_embed)\n",
+    "\n",
+    "        # The batch dimension will get automatically broadcasted\n",
+    "        # for the position embedding, as it should be the same for all the batches\n",
+    "        x = tok_emb + pos_emb # (B, T, n_embed)\n",
+    "        \n",
+    "        x = self.blocks(x) # (B, T, n_embed)\n",
+    "\n",
+    "        logits = self.lm_head(x) # (B, T, vocab_size)\n",
+    "\n",
+    "    ### From here on out, it's the same as the previous version\n",
+    "\n",
+    "        if targets is None:\n",
+    "            loss = None\n",
+    "        else:\n",
+    "            B, T, C = logits.shape\n",
+    "\n",
+    "            # We will reshape the logits instead of the input here.\n",
+    "            logits = logits.view(B * T, C)\n",
+    "            targets = targets.view(B * T)\n",
+    "        \n",
+    "            loss = F.cross_entropy(logits, targets)\n",
+    "\n",
+    "        return logits, loss\n",
+    "    \n",
+    "    def generate(self, idx: torch.tensor, max_new_tokens: int):\n",
+    "        # idx is a (Batch, Time) array of indices in the current context\n",
+    "\n",
+    "        # The point of this is to start with a sequence and \n",
+    "        # keep adding new tokens to it, and then keep feeding it back into the model\n",
+    "        # to get new predictions until we have the desired number of new tokens\n",
+    "\n",
+    "        for _ in range(max_new_tokens):\n",
+    "            \n",
+    "            # This function, even though general, is a bit ridiculous\n",
+    "            # Because this is a bi-gram model, we only need to pass the last token\n",
+    "            # to our table, but we are passing the entire sequence to the table\n",
+    "            # and then, at the next step (`logits = ...`) we pick the last token\n",
+    "            # Out of all the tokens in the sequence\n",
+    "\n",
+    "            # Later, we will use the entire sequence to predict the next token\n",
+    "             \n",
+    "            # Crop the idx to last_block_size tokens \n",
+    "            # Because now we're using positional embeddings, we can never have\n",
+    "            # more than `block_size` coming in.  \n",
+    "            # The positional embedding has embeddings only up to `block_size`. (# of rows)\n",
+    "            idx_cond = idx[:, -block_size:]\n",
+    "\n",
+    "            # get the predictions, we don't care about the loss because we're not training\n",
+    "            logits, loss = self(idx_cond)\n",
+    "\n",
+    "            # focus only on the last time step\n",
+    "            logits = logits[:, -1, :] # becomes (Batch, Channel)\n",
+    "\n",
+    "            # apply softmax to convert to probabilities\n",
+    "            probs = F.softmax(logits, dim=-1) # becomes (Batch, Channel)\n",
+    "\n",
+    "            # sample from the distribution or take the most likely\n",
+    "            idx_next = torch.multinomial(probs, num_samples=1) # becomes (Batch, 1)\n",
+    "\n",
+    "            # append sampled index to the running sequence\n",
+    "            idx = torch.cat([idx, idx_next], dim=-1) # becomes (Batch, Time + 1)\n",
+    "        \n",
+    "        return idx"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "At this point, he adds a bunch of dropout layers, changes the number of layers in each block, and changes the number of heads in the multi-head attention and batch size, and he runs it on his `a100` GPU for 15 mins, and gets a pretty good structure-wise (but not-semantically) correct sentences."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Encoder-Decoder Architecture\n",
+    "\n",
+    "What we implemented above (the left hand side of the graphic) is called the Decoder part of the Transformer, we didn;t implement the right-hand side because this is just a text-prediction model, and we have that upper-triangular mask that prevents the model from looking at the future tokens, which makes it a decoder.\n",
+    "\n",
+    "The task considered in the original paper is a translation task, and that's why they needed the Encoder part of the transformer. (Encodes French, decodes English)\n",
+    "\n",
+    "What it means is that the generation will be conditioned on the French sentence, and now all the tokens will be allowed to talk to each other (No mask)\n",
+    "\n",
+    "So the queries are still generated from (left hand side) `x`, but the keys and the values are coming from the right hand side, so it conditions the generation on the entirety of the French sentence."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Nano-GPT\n",
+    "\n",
+    "It's basically what we have done here, and it includes two files `train.py` and `model.py`. \n",
+    "\n",
+    "`model.py` is basically the same code as here, but it's more complicated because it includes:\n",
+    "\n",
+    "- Saving and loading checkpoints\n",
+    "- Pre-trained weights\n",
+    "- Decaying the learning rate\n",
+    "- Compiling the model\n",
+    "- Using distributed learning across multiple nodes (GPUs)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Chat-GPT\n",
+    "\n",
+    "Chat-GPT was pre-trained like this on a large corpus of the internet (You can see model parameters and data-size in their paper), but then it was fine-tuned to be a chatbot.\n",
+    "\n",
+    "Then they got some human evaluators to evaluate the chatbot, and used that human-feedback data to train a reward model.\n",
+    "\n",
+    "Once they have the reward model, they run PPO, which is a form of policy gradient reinforcement learning optimizer to fine-tune their sampling policy (The answers that chatGPT generates are expected to score a high reward from the reward model)"
+   ]
   }
  ],
  "metadata": {
